remove arguments from build.gradle that made build fail